--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The Tribute Band/title>
+  <title>The Tribute Band</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+<h1>Test</h1>
   <script src="js/scripts.js"></script>
 </body>
 </html>
