--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
 <head>
   <meta charset="utf-8">
 
-  <title>The Tribute Band</title>
+  <title>Björk</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="css\tribute-band.css?v=1.0">
 
 </head>
 
 <body>
-<h1>Test</h1>
-  <script src="js/scripts.js"></script>
+  <div id="main" class="text-center">
+    <h1 id="title">Björk <span>Guðmundsdóttir</span></h1>
+    <div id="img-div">
+      <img id="image" src="https://vignette.wikia.nocookie.net/4chanmusic/images/0/08/Mai_wiafu.jpg">
+      <div id="img-caption">Björk as a young artist</div>
+  </div>
+  </div>
 </body>
 </html>
